Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.2.2
-
None
-
Qt + Mingw tool chain on PC
-
d51e2b613fc7469436a242d4f3ccb7bbaec4d6ac
Description
varibles of type uchar (typedef'd to be unsigned char) are shown as signed integer.
Attachments
Issue Links
- is duplicated by
-
QTCREATORBUG-14153 cdb: incorrect display of unsigned char values
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-13809 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
109719,2 | Debugger: Show unsigned chars as unsigned values | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |