Debugger: Show unsigned chars as unsigned values

Task-number: QTCREATORBUG-13809
Change-Id: I5dbb85c44cdc801edee1f33bc0c0cf47ec9916a3
Reviewed-by: David Schulz <david.schulz@theqtcompany.com>